crates/ty_python_semantic/resources/mdtest/snapshots/rich_comparison.md_-_Comparison___Rich_Com…_-_Invalid_comparisions_-_Not_callable_dunder_…_(8c5dd8b3e94c7202).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: rich_comparison.md - Comparison: Rich Comparison - Invalid comparisions - Not callable dunder comparison methods
mdtest path: crates/ty_python_semantic/resources/mdtest/comparison/instances/rich_comparison.md
---

# Python source files

## mdtest_snippet.py

```
 1 | class A:
 2 |     __eq__: None = None
 3 |     __ne__: None = None
 4 |     __lt__: None = None
 5 |     __gt__: None = None
 6 |     __le__: None = None
 7 |     __ge__: None = None
 8 | 
 9 | # error: [unsupported-operator]
10 | A() == A()
11 | # error: [unsupported-operator]
12 | A() != A()
13 | # error: [unsupported-operator]
14 | A() < A()
15 | # error: [unsupported-operator]
16 | A() > A()
17 | # error: [unsupported-operator]
18 | A() <= A()
19 | # error: [unsupported-operator]
20 | A() >= A()
21 | 
22 | # Fine
23 | A() == 1
24 | A() != 1
```

# Diagnostics

```
error[unsupported-operator]: Operator `==` is not supported for types `A` and `A`
  --> src/mdtest_snippet.py:10:1
   |
 9 | # error: [unsupported-operator]
10 | A() == A()
   | ^^^^^^^^^^
11 | # error: [unsupported-operator]
12 | A() != A()
   |
info: Operator '==' is not callable
info: rule `unsupported-operator` is enabled by default

```

```
error[unsupported-operator]: Operator `!=` is not supported for types `A` and `A`
  --> src/mdtest_snippet.py:12:1
   |
10 | A() == A()
11 | # error: [unsupported-operator]
12 | A() != A()
   | ^^^^^^^^^^
13 | # error: [unsupported-operator]
14 | A() < A()
   |
info: Operator '!=' is not callable
info: rule `unsupported-operator` is enabled by default

```

```
error[unsupported-operator]: Operator `<` is not supported for types `A` and `A`
  --> src/mdtest_snippet.py:14:1
   |
12 | A() != A()
13 | # error: [unsupported-operator]
14 | A() < A()
   | ^^^^^^^^^
15 | # error: [unsupported-operator]
16 | A() > A()
   |
info: Operator '<' is not callable
info: rule `unsupported-operator` is enabled by default

```

```
error[unsupported-operator]: Operator `>` is not supported for types `A` and `A`
  --> src/mdtest_snippet.py:16:1
   |
14 | A() < A()
15 | # error: [unsupported-operator]
16 | A() > A()
   | ^^^^^^^^^
17 | # error: [unsupported-operator]
18 | A() <= A()
   |
info: Operator '>' is not callable
info: rule `unsupported-operator` is enabled by default

```

```
error[unsupported-operator]: Operator `<=` is not supported for types `A` and `A`
  --> src/mdtest_snippet.py:18:1
   |
16 | A() > A()
17 | # error: [unsupported-operator]
18 | A() <= A()
   | ^^^^^^^^^^
19 | # error: [unsupported-operator]
20 | A() >= A()
   |
info: Operator '<=' is not callable
info: rule `unsupported-operator` is enabled by default

```

```
error[unsupported-operator]: Operator `>=` is not supported for types `A` and `A`
  --> src/mdtest_snippet.py:20:1
   |
18 | A() <= A()
19 | # error: [unsupported-operator]
20 | A() >= A()
   | ^^^^^^^^^^
21 |
22 | # Fine
   |
info: Operator '>=' is not callable
info: rule `unsupported-operator` is enabled by default

```
